--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="15dp"
-    tools:context=".OtpActivity">
+    tools:context=".ui.activity.OtpActivity">
 
     <TextView
         android:id="@+id/textView3"
